Primeiro comit oficina os

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,19 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
+@source '../../storage/framework/views/*.php';
+@source '../**/*.blade.php';
+@source '../**/*.js';
+
+@theme {
+    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol', 'Noto Color Emoji';
+}
+@import './topo.css';
+@import './menu.css';
+/* Se quiser incluir login ou outros, adicione: */
+@import './login.css';
+@import './formulario.css';
+@import './show-cliente.css';
+@import './show-ordem.css';
+@import './listar-ordens.css';
